# assembly-systems

./: CMakeLists.txt  README.md
A/: preparing.py
B/: CMakeLists.txt  lib.cpp
C/: CMakeLists.txt  main.cpp  main.h  main_test.cpp
